	**************************************************


		CHANGES IN R VERSION 0.63.3

NEW FEATURES

    o	New standard package `lqs' for resistant regression and
	covariance estimation, contributed by B. D. Ripley.

    o	new functions match.fun() and kronecker() [by Jonathan Rougier]

    o	par(las = 3) is a new option.

    o	new function jitter()  [slightly more useful than S's].

BUG FIXES

    o	boxplot(<data.frame>) now works again.

    o	dyn.load(..) failing gives more informative error message.

    o	Ops.factor:  not error, but a warning + NAs

    o	bug.report() keeps report file if can't be e-mailed

    o	Ops.data.frame :  things like  d.fr < a	  now return a matrix

    o	data.frame():  duplicated row.names now give a warning when dropped.

    o	boxplot(.., ylim=..) or (.., axes=..)  gave erronous warning

    o	glm had wrong init code for models with offsets. Also fixed
	so that linear predictor includes offset, also when predicting. 

    o	predict.glm didn't work with se=T

    o	backsolve(), qr.solve... now return a vector when x (or y) is a vector.

    o	string tags now converted to symbols and strange symbolic
	tags print as strings, cf. e<-quote(c(F=2, "tail area" = .5)), etc. 

    o	row.names(.) <- val  doesn't allow duplicated values anymore.

    o	library(mva)'s dist() now works with both "euclidean" & "euclidian"

    o	revised curve function to avoid using grep patterns that caused
	problems under Solaris 2.6
 
    o	coplot() now has 'number' and 'overlap' arguments, and should work
	in more situations. [by John Maindonald and MM].

    o	save(..ascii=TRUE) now uses "full precision" for numerics.

    o	as.array() preserves names()

    o	outer() works for general array args and preserves (dim)names.

    o	print.factor and print.ordered now return their args invisibly.


		CHANGES IN R VERSION 0.63.2

NEW FEATURES

    o	sink() has new `append' argument.

    o	new function rle().
